--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script defer src="main.js"></script>
     <title>Document</title>
 </head>
 
 <body>
+    <div id="top-bar">Wanna play a game?</div>
+
     <main id="container">
-        <div></div>
+        <div id="left-reel"></div>
+        <div id="middle-reel"></div>
+        <div id="right-reel"></div>
     </main>
+
+    <div id="bottom-bar">
+        <button id="spinBtn">SPIN</button>
+    </div>
 
 </body>
 
