update append image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="top-bar">Wanna play a game?</div>
+    <div id="top-bar"></div>
 
     <main id="container">
         <div id="left-reel"></div>
