--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="top-bar"></div>
+    <div id="top-bar" class="msg">SPIN TO WIN!</div>
 
     <main id="container">
         <div id="left-reel"></div>
