--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="top-bar" class="msg">SPIN TO WIN!</div>
+    <header id="top-bar">SPIN TO WIN!</header>
 
     <main id="container">
         <div id="left-reel"></div>
@@ -18,9 +18,24 @@
         <div id="right-reel"></div>
     </main>
 
-    <div id="bottom-bar">
-        <button id="spinBtn">SPIN</button>
-    </div>
+    <footer id="bottom-bar">
+        <div>
+            CREDITS: <span id="player-money">200</span>
+        </div>
+
+        <div>
+            <button id="spinBtn">SPIN</button>
+        </div>
+
+        <div id="bet">
+            <p>
+                <!-- <button>+</button>
+                <button>-</button> -->
+            </p>
+            <input type="text" placeholder="PLACE YOUR BET!!!">
+            <button id="betBtn">ENTER</button>
+        </div>
+    </footer>
 
 </body>
 
