--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <div id="bet">
             <p>
                 <!-- <button>+</button>
-                <button>-</button> -->
+                    <button>-</button> -->
             </p>
-            <input type="text" placeholder="PLACE YOUR BET!!!">
-            <button id="betBtn">ENTER</button>
+            <input type="text" placeholder="BET HERE!!!">
+            <!-- <button id="betBtn">ENTER</button> -->
         </div>
     </footer>
 
