update player money

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
         <div id="bet">
             <p>
-                <!-- <button>+</button>
-                    <button>-</button> -->
+                <input type="text" placeholder="BET HERE!!!">
+                <button class="pm">+</button>
+                <button class="pm">-</button>
             </p>
-            <input type="text" placeholder="BET HERE!!!">
             <!-- <button id="betBtn">ENTER</button> -->
         </div>
     </footer>
