--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
+    <div id="background"></div>
     <div class="slot-wrapper">
 
-        <header id="top-bar">SPIN TO WIN!</header>
+        <header id="top-bar">CLICK SPIN!</header>
 
         <main id="container">
             <div id="left-reel"></div>
@@ -23,7 +24,7 @@
         </main>
 
         <footer id="bottom-bar">
-            <div>
+            <div id="credits">
                 CREDITS: <span id="player-money">200</span>
             </div>
 
@@ -34,8 +35,8 @@
             <div id="bet">
                 <p>
                     <input type="text" placeholder="BET HERE!!!">
-                    <button class="pm">+</button>
-                    <button class="pm">-</button>
+                    <button class="p">+</button>
+                    <button class="m">-</button>
                 </p>
                 <!-- <button id="betBtn">ENTER</button> -->
             </div>
