--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <div id="bet">
                 <p>
                     <input type="text" placeholder="BET HERE!!!">
-                    <button class="p">+</button>
-                    <button class="m">-</button>
+                    <button id="plus">+</button>
+                    <button id="minus">-</button>
                 </p>
                 <!-- <button id="betBtn">ENTER</button> -->
             </div>
