--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="background"></div>
     <div class="slot-wrapper">
 
-        <header id="top-bar">CLICK SPIN!</header>
+        <header id="top-bar">PLACE YOUR BET</header>
 
         <main id="container">
             <div id="left-reel"></div>
